compiler/tests/success/subroutines/x86-64/arr_exp.jazz
fn test (reg u64[2] t) -> reg u64[2] {
   inline int i;
   for i = 0 to 2 {
     t[i] += 1;
   }
   return t;
}

export fn main () -> reg u64 {
  reg u64[2] t;
  reg u64 r;
  inline int i;
  for i = 0 to 2 {
    t[i] = i;
  }
  t = test(t);
  t[0] += t[1];
  r = t[0];
  return r;
}
