compiler/tests/fail/array_expansion/x86-64/default_scale_lv.jazz
export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  r[u32 0] = 2;
  r[u32 1] = 1;
  res = r[0];

  return res;
}
